add cors support

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.12.0",
     "cheerio": "^0.20.0",
     "co": "^4.6.0",
+    "kcors": "^1.2.1",
     "koa": "^1.2.0",
     "koa-cash": "^2.0.0",
     "lru-cache": "^4.0.1"
