--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "node start.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.12.0",
-    "cheerio": "^0.20.0",
-    "co": "^4.6.0",
-    "kcors": "^1.2.1",
-    "koa": "^1.2.0",
-    "koa-cash": "^2.0.0",
-    "lru-cache": "^4.0.1"
+    "axios": "0.21.0",
+    "cheerio": "1.0.0-rc.3",
+    "kcors": "2.2.2",
+    "koa": "2.13.0",
+    "koa-cash": "4.0.5",
+    "lru-cache": "6.0.0"
+  },
+  "devDependencies": {
+    "@egoist/prettier-config": "^0.1.0",
+    "prettier": "^2.2.1"
   }
 }
