--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "functions": {
-    "index.js": {
-      "runtime": "@vercel/node@1.8.5"
-    }
-  }
+  "rewrites": [{ "source": "/.*", "destination": "/api/index" }]
 }
